--- a/game.html
+++ b/game.html
@@ -13,10 +13,10 @@
 
     <style>
         .deadPet {
-            -moz-animation: deadPet .8s infinite linear;
-            -o-animation: deadPet .8s infinite linear;
-            -webkit-animation: deadPet .8s infinite linear;
-            animation: deadPet .8s infinite linear;
+            -moz-animation: deadPet .8s linear 3;
+            -o-animation: deadPet .8s linear 3;
+            -webkit-animation: deadPet .8s linear 3;
+            animation: deadPet .8s linear 3;
         }
 
         @keyframes deadPet {
