--- a/game.html
+++ b/game.html
@@ -13,10 +13,10 @@
 
     <style>
         .deadPet {
-            -moz-animation: deadPet .9s infinite linear;
-            -o-animation: deadPet .9s infinite linear;
-            -webkit-animation: deadPet .9s infinite linear;
-            animation: deadPet .9s infinite linear;
+            -moz-animation: deadPet .8s infinite linear;
+            -o-animation: deadPet .8s infinite linear;
+            -webkit-animation: deadPet .8s infinite linear;
+            animation: deadPet .8s infinite linear;
         }
 
         @keyframes deadPet {
@@ -63,9 +63,9 @@
 
                                 </div>
 
-                                <div id="hungerchangearrow"
+                                <div id="HungerChangeArrow"
                                     class="inline-flex items-baseline rounded-full px-2.5 py-0.5 text-sm font-medium bg-green-100 text-green-800 md:mt-2 lg:mt-0">
-                                    <svg id="greenarrow" class="-ml-1 mr-0.5 h-5 w-5 flex-shrink-0 self-center text-green-500"
+                                    <svg id="GreenArrow" class="-ml-1 mr-0.5 h-5 w-5 flex-shrink-0 self-center text-green-500"
                                         viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                                         <path fill-rule="evenodd"
                                             d="M10 17a.75.75 0 01-.75-.75V5.612L5.29 9.77a.75.75 0 01-1.08-1.04l5.25-5.5a.75.75 0 011.08 0l5.25 5.5a.75.75 0 11-1.08 1.04l-3.96-4.158V16.25A.75.75 0 0110 17z"
@@ -82,9 +82,9 @@
 
                                 </div>
 
-                                <div
+                                <div id="HappinessChangeArrow"
                                     class="inline-flex items-baseline rounded-full px-2.5 py-0.5 text-sm font-medium bg-green-100 text-green-800 md:mt-2 lg:mt-0">
-                                    <svg class="-ml-1 mr-0.5 h-5 w-5 flex-shrink-0 self-center text-green-500"
+                                    <svg id="GreenArrow2" class="-ml-1 mr-0.5 h-5 w-5 flex-shrink-0 self-center text-green-500"
                                         viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                                         <path fill-rule="evenodd"
                                             d="M10 17a.75.75 0 01-.75-.75V5.612L5.29 9.77a.75.75 0 01-1.08-1.04l5.25-5.5a.75.75 0 011.08 0l5.25 5.5a.75.75 0 11-1.08 1.04l-3.96-4.158V16.25A.75.75 0 0110 17z"
@@ -101,9 +101,9 @@
 
                                 </div>
 
-                                <div
+                                <div id="SleepChangeArrow"
                                     class="inline-flex items-baseline rounded-full px-2.5 py-0.5 text-sm font-medium bg-red-100 text-red-800 md:mt-2 lg:mt-0">
-                                    <svg class="-ml-1 mr-0.5 h-5 w-5 flex-shrink-0 self-center text-red-500"
+                                    <svg id="GreenArrow3" class="-ml-1 mr-0.5 h-5 w-5 flex-shrink-0 self-center text-red-500"
                                         viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                                         <path fill-rule="evenodd"
                                             d="M10 3a.75.75 0 01.75.75v10.638l3.96-4.158a.75.75 0 111.08 1.04l-5.25 5.5a.75.75 0 01-1.08 0l-5.25-5.5a.75.75 0 111.08-1.04l3.96 4.158V3.75A.75.75 0 0110 3z"
@@ -120,9 +120,9 @@
 
                                 </div>
 
-                                <div
+                                <div id="EnergyChangeArrow"
                                     class="inline-flex items-baseline rounded-full px-2.5 py-0.5 text-sm font-medium bg-red-100 text-red-800 md:mt-2 lg:mt-0">
-                                    <svg class="-ml-1 mr-0.5 h-5 w-5 flex-shrink-0 self-center text-red-500"
+                                    <svg id="GreenArrow4" class="-ml-1 mr-0.5 h-5 w-5 flex-shrink-0 self-center text-red-500"
                                         viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                                         <path fill-rule="evenodd"
                                             d="M10 3a.75.75 0 01.75.75v10.638l3.96-4.158a.75.75 0 111.08 1.04l-5.25 5.5a.75.75 0 01-1.08 0l-5.25-5.5a.75.75 0 111.08-1.04l3.96 4.158V3.75A.75.75 0 0110 3z"
