--- a/game.html
+++ b/game.html
@@ -78,7 +78,7 @@
                             <dt class="text-base font-normal text-gray-900">Happiness</dt>
                             <dd class="mt-1 flex items-baseline justify-between md:block lg:flex">
                                 <div class="flex items-baseline text-2xl font-semibold text-indigo-600">
-                                    <span id="happinesStat"></span>
+                                    <span id="happinessStat"></span>
 
                                 </div>
 
